@@ -850,14 +850,218 @@ namespace EQExtractor2.Patches
 
         public override void RegisterExplorers()
         {
-            OpManager.RegisterExplorer("OP_NewZone", ExploreNewZonePacket);
+            //OpManager.RegisterExplorer("OP_NewZone", ExploreNewZonePacket);
+            OpManager.RegisterExplorer("OP_ZoneEntry", ExploreZoneEntry);
+            OpManager.RegisterExplorer("OP_PlayerProfile", ExplorePlayerProfile);
+            OpManager.RegisterExplorer("OP_RespawnWindow", ExploreRespawnWindow);
+            OpManager.RegisterExplorer("OP_ZonePlayerToBind", ExploreZonePlayerToBind);
+            OpManager.RegisterExplorer("OP_RequestClientZoneChange", ExploreRequestClientZoneChange);
+            OpManager.RegisterExplorer("OP_DeleteSpawn", ExploreDeleteSpawn);
+            OpManager.RegisterExplorer("OP_SpawnAppearance", ExploreSpawnAppearance);
+            
         }
 
-        public void ExploreNewZonePacket(StreamWriter OutputStream, ByteStream Buffer)
+        public void ExploreZoneEntry(StreamWriter OutputStream, ByteStream Buffer, PacketDirection Direction)
+        {
+            if (Direction != PacketDirection.ServerToClient)
+                return;
+
+            string Name = Buffer.ReadString(false);
+            UInt32 SpawnID = Buffer.ReadUInt32();
+            byte Level = Buffer.ReadByte();
+            Buffer.SkipBytes(4);
+            bool IsNPC = (Buffer.ReadByte() != 0);
+            UInt32 Bitfield = Buffer.ReadUInt32();
+
+            string DestructableString1;
+            string DestructableString2;
+            string DestructableString3;
+            UInt32 DestructableUnk1;
+            UInt32 DestructableUnk2;
+            UInt32 DestructableID1;
+            UInt32 DestructableID2;
+            UInt32 DestructableID3;
+            UInt32 DestructableID4;
+            UInt32 DestructableUnk3;
+            UInt32 DestructableUnk4;
+            UInt32 DestructableUnk5;
+            UInt32 DestructableUnk6;
+            UInt32 DestructableUnk7;
+            UInt32 DestructableUnk8;
+            UInt32 DestructableUnk9;
+            byte DestructableByte;
+
+            Byte OtherData = Buffer.ReadByte();
+
+            Buffer.SkipBytes(8);    // Skip 8 unknown bytes
+
+            DestructableString1 = "";
+            DestructableString2 = "";
+            DestructableString3 = "";
+
+            OutputStream.WriteLine("Spawn Name: {0} ID: {1} Level: {2} {3}\r\n", Name, SpawnID, Level, IsNPC ? "NPC" : "Player");
+
+            if ((OtherData & 1) > 0)
+            {
+                // Destructable Objects.
+                
+                DestructableString1 = Buffer.ReadString(false);
+
+                DestructableString2 = Buffer.ReadString(false);
+
+                DestructableString3 = Buffer.ReadString(false);
+
+                DestructableUnk1 = Buffer.ReadUInt32();
+
+                DestructableUnk2 = Buffer.ReadUInt32();
+
+                DestructableID1 = Buffer.ReadUInt32();
+
+                DestructableID2 = Buffer.ReadUInt32();
+
+                DestructableID3 = Buffer.ReadUInt32();
+
+                DestructableID4 = Buffer.ReadUInt32();
+
+                DestructableUnk3 = Buffer.ReadUInt32();
+
+                DestructableUnk4 = Buffer.ReadUInt32();
+
+                DestructableUnk5 = Buffer.ReadUInt32();
+
+                DestructableUnk6 = Buffer.ReadUInt32();
+
+                DestructableUnk7 = Buffer.ReadUInt32();
+
+                DestructableUnk8 = Buffer.ReadUInt32();
+
+                DestructableUnk9 = Buffer.ReadUInt32();
+
+                DestructableByte = Buffer.ReadByte();
+
+                OutputStream.WriteLine("DESTRUCTABLE OBJECT:\r\n");
+                OutputStream.WriteLine(" String1: {0}", DestructableString1);
+                OutputStream.WriteLine(" String2: {0}", DestructableString2);
+                OutputStream.WriteLine(" String3: {0}\r\n", DestructableString3);
+
+                OutputStream.WriteLine(" Unk1: {0,8:x} Unk2: {1,8:x}\r\n ID1 : {2,8:x} ID2 : {3,8:x} ID3 : {4,8:x} ID4 : {5,8:x}\r\n Unk3: {6,8:x} Unk4: {7,8:x} Unk5: {8,8:x} Unk6: {9,8:x}\r\n Unk7: {10,8:x} Unk8: {11,8:x} Unk9: {12,8:x}\r\n UnkByte:    {13,2:x}",
+                          DestructableUnk1, DestructableUnk2, DestructableID1, DestructableID2, DestructableID3, DestructableID4,
+                          DestructableUnk3, DestructableUnk4, DestructableUnk5, DestructableUnk6, DestructableUnk7, DestructableUnk8,
+                          DestructableUnk9, DestructableByte);
+            }
+
+            
+            OutputStream.WriteLine("");
+
+            AddExplorerSpawn(SpawnID, Name);
+        }
+
+        public void ExploreSpawnAppearance(StreamWriter OutputStream, ByteStream Buffer, PacketDirection Direction)
+        {
+            UInt16 SpawnID = Buffer.ReadUInt16();
+            UInt16 Type = Buffer.ReadUInt16();
+            UInt32 Param = Buffer.ReadUInt32();
+            string SpawnName = FindExplorerSpawn(SpawnID);
+
+            OutputStream.WriteLine("Spawn {0} {1} Appearance Change Type {2} Parameter {3}", SpawnID, SpawnName, Type, Param);
+
+            OutputStream.WriteLine("");
+        }
+        public void ExploreNewZonePacket(StreamWriter OutputStream, ByteStream Buffer, PacketDirection Direction)
         {
             Buffer.SetPosition(704);
 
             OutputStream.WriteLine("Zone name is {0}\r\n", Buffer.ReadString(false));
+        }
+
+        public void ExplorePlayerProfile(StreamWriter OutputStream, ByteStream Buffer, PacketDirection Direction)
+        {
+            Buffer.SetPosition(12);
+
+            UInt32 PlayerClass = Buffer.ReadUInt32();
+
+            Buffer.SetPosition(56);
+
+            byte PlayerLevel = Buffer.ReadByte();
+
+            Buffer.SetPosition(18100);
+
+            OutputStream.WriteLine("Name: {0} Class: {1} Level: {2}\r\n", Buffer.ReadString(false), PlayerClass, PlayerLevel);
+        }
+
+        public void ExploreRespawnWindow(StreamWriter OutputStream, ByteStream Buffer, PacketDirection Direction)
+        {
+            if (Direction == PacketDirection.ServerToClient)
+            {
+                UInt32 Unknown000 = Buffer.ReadUInt32();
+                UInt32 TimeRemaining = Buffer.ReadUInt32();
+                UInt32 Unknown008 = Buffer.ReadUInt32();
+                UInt32 NumBinds = Buffer.ReadUInt32();
+
+                OutputStream.WriteLine("Unknown000: {0} Time: {1} Unknown008: {2} Num Binds: {3}\r\n", Unknown000, TimeRemaining, Unknown008, NumBinds);
+
+                for (int i = 0; i < NumBinds; ++i)
+                {
+                    UInt32 BindNumber = Buffer.ReadUInt32();
+                    UInt32 ZoneID = Buffer.ReadUInt32();
+                    float X = Buffer.ReadSingle();
+                    float Y = Buffer.ReadSingle();
+                    float Z = Buffer.ReadSingle();
+                    float Heading = Buffer.ReadSingle();
+                    string ZoneName = Buffer.ReadString(false);
+                    byte Valid = Buffer.ReadByte();
+
+                    OutputStream.WriteLine("Bind Number: {0} Zone ID: {1} Zone Name: {2} Valid: {3}", BindNumber, ZoneID, ZoneName, Valid);
+                }
+            }
+
+            OutputStream.WriteLine("");
+        }
+
+        public void ExploreZonePlayerToBind(StreamWriter OutputStream, ByteStream Buffer, PacketDirection Direction)
+        {
+            UInt32 ZoneID = Buffer.ReadUInt32();
+
+            float X = Buffer.ReadSingle();
+            float Y = Buffer.ReadSingle();
+            float Z = Buffer.ReadSingle();
+            float Heading = Buffer.ReadSingle();
+            string ZoneName = Buffer.ReadString(false);
+
+            byte Unknown021 = Buffer.ReadByte();
+            UInt32 Unknown022 = Buffer.ReadUInt32();
+            UInt32 Unknown023 = Buffer.ReadUInt32();
+            UInt32 Unknown024 = Buffer.ReadUInt32();
+
+            OutputStream.WriteLine("ZoneID: {0} Loc: ({1}, {2}, {3}) ZoneName: {4}", ZoneID, X, Y, Z, ZoneName);
+            OutputStream.WriteLine("Unknowns: {0} {1} {2} {3}", Unknown021, Unknown022, Unknown023, Unknown024);
+
+
+            OutputStream.WriteLine("");
+        }
+
+        public void ExploreRequestClientZoneChange(StreamWriter OutputStream, ByteStream Buffer, PacketDirection Direction)
+        {
+            UInt16 ZoneID = Buffer.ReadUInt16();
+            UInt16 Instance = Buffer.ReadUInt16();
+            float X = Buffer.ReadSingle();
+            float Y = Buffer.ReadSingle();
+            float Z = Buffer.ReadSingle();
+            float Heading = Buffer.ReadSingle();
+            UInt32 Type = Buffer.ReadUInt16();
+
+            OutputStream.WriteLine("ZoneID: {0} Type: {1}", ZoneID, Type);
+            OutputStream.WriteLine("");
+        }
+
+        public void ExploreDeleteSpawn(StreamWriter OutputStream, ByteStream Buffer, PacketDirection Direction)
+        {
+            UInt32 SpawnID = Buffer.ReadUInt32();
+            byte Decay = 0; // Buffer.ReadByte();
+
+            string SpawnName = FindExplorerSpawn(SpawnID);
+
+            OutputStream.WriteLine("SpawnID: {0} {1} Decay: {2}\r\n", SpawnID, SpawnName, Decay);
         }
 
         override public bool DumpAAs(string FileName)
