@@ -306,7 +306,7 @@ OP_PVPLeaderBoardReply=0x3842		# C
 OP_PVPLeaderBoardDetailsRequest=0x6c75	# C
 OP_PVPLeaderBoardDetailsReply=0x7fd7	# C
 OP_RestState=0x5d24					# C
-OP_RespawnWindow=0x0a59				# C
+OP_RespawnWindow=0x107f				# C
 OP_DisciplineTimer=0x047c			# C
 OP_LDoNButton=0x1031				# C
 OP_SetStartCity=0x68f0				# C
