@@ -166,7 +166,7 @@ OP_BuffFadeMsg=0x0000				# C
 OP_ConsentResponse=0x0000			# C
 OP_MemorizeSpell=0x0000				# C
 OP_SwapSpell=0x0000					# C
-OP_CastSpell=0x0000					# C
+OP_CastSpell=0x7286					# C
 OP_Consider=0x0000					# C
 OP_FormattedMessage=0x0000			# C
 OP_SimpleMessage=0x0000				# C 0x0000
